Add basic skeleton for the index page, confirm JS and CSS to work

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,8 +5,28 @@
 
 <body>
 
-    <div id="root">
+    <div id="body-wrapper">
+        <header>
 
+            <!-- TODO: See whether Steven has a logo in mind or not to add here -->
+            <div id="header-logo">
+                <h1>SdG</h1>
+            </div>
+
+            <!-- TODO: See what contact information Steven wants to have listed here -->
+            <nav id="nav--contact-list">
+                <ol>
+                    <li class="list-item"></li>
+                    <li class="list-item"></li>
+                    <li class="list-item"></li>
+                    <li class="list-item"></li>
+                </ol>
+            </nav>
+
+        </header>
+
+        <div id="body-content"></div>
+        <footer></footer>
     </div>
 
 </body>
