Add skeleton index nav divs

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,6 @@
 
     <div id="body-wrapper">
         <header>
-
             <!-- TODO: See whether Steven has a logo in mind or not to add here -->
             <div id="header-logo">
                 <h1>SdG</h1>
@@ -22,10 +21,14 @@
                     <li class="list-item"></li>
                 </ul>
             </nav>
-
         </header>
 
-        <div id="body-content"></div>
+        <div id="body-content">
+            <div class="body-navlink" id="about"></div>
+            <div class="body-navlink" id="sales"></div>
+            <div class="body-navlink" id="cooperations"></div>
+            <div class="body-navlink" id="extras"></div>
+        </div>
     </div>
 
 </body>
