Implement consistent naming scheme

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,7 +13,8 @@
             </div>
 
             <!-- TODO: See what contact information Steven wants to have listed here -->
-            <nav id="nav--contact-list">
+            <!-- Possibly do SVG icon fontsets -->
+            <nav id="nav-contact-list">
                 <ul>
                     <li class="list-item"></li>
                     <li class="list-item"></li>
