Add placeholder texts

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,19 +16,19 @@
             <!-- Possibly do SVG icon fontsets -->
             <nav id="nav-contact-list">
                 <ul>
-                    <li class="list-item"></li>
-                    <li class="list-item"></li>
-                    <li class="list-item"></li>
-                    <li class="list-item"></li>
+                    <li class="list-item">Item 1</li>
+                    <li class="list-item">Item 2</li>
+                    <li class="list-item">Item 3</li>
+                    <li class="list-item">Item 4</li>
                 </ul>
             </nav>
         </header>
 
         <div id="body-content">
-            <div class="body-navlink" id="about"></div>
-            <div class="body-navlink" id="sales"></div>
-            <div class="body-navlink" id="cooperations"></div>
-            <div class="body-navlink" id="extras"></div>
+            <div class="body-navlink" id="about">About</div>
+            <div class="body-navlink" id="sales">Sales</div>
+            <div class="body-navlink" id="cooperations">Cooperations</div>
+            <div class="body-navlink" id="extras">Extras</div>
         </div>
     </div>
 
