--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,10 +16,16 @@
             <!-- Possibly do SVG icon fontsets -->
             <nav id="nav-contact-list">
                 <ul>
-                    <li class="list-item">Item 1</li>
-                    <li class="list-item">Item 2</li>
-                    <li class="list-item">Item 3</li>
-                    <li class="list-item">Item 4</li>
+                    <!-- To change the color of the SVG, check out Issue #10 on the Github Repo -->
+                    <li class="list-item"><a href="tel:+31645048407">
+                        <object data="../images/phone-icon.svg" type="image/svg+xml"></object>06 450 48 407
+                    </a></li>
+                    <li class="list-item"><a href="mailto:graafdesteven@outlook.com">
+                        <object data="../images/email-icon.svg" type="image/svg+xml" id="email-icon"></object>GraafdeSteven@outlook.com
+                    </a></li>
+                    <li class="list-item"><a href="https://www.linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank">
+                        <object data="../images/linkedin-icon.svg" type="image/svg+xml"></object>Steven de Graaf
+                    </a></li>
                 </ul>
             </nav>
         </header>
