Add the rest of the pages & link to them in index.html

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -29,10 +29,10 @@
     </header>
 
     <div id="body-content">
-        <div class="body-navlink" id="about">About</div>
-        <div class="body-navlink" id="sales">Sales</div>
-        <div class="body-navlink" id="cooperations">Cooperations</div>
-        <div class="body-navlink" id="extras">Extras</div>
+        <div class="body-navlink" id="about" onclick="window.location.href='about.html'">About</div>
+        <div class="body-navlink" id="sales" onclick="window.location.href='sales.html'">Sales</div>
+        <div class="body-navlink" id="cooperations" onclick="window.location.href='cooperation.html'">Cooperations</div>
+        <div class="body-navlink" id="extras" onclick="window.location.href='extras.html'">Extras</div>
     </div>
 </div>
 
