Specify which page the body-wrapper belongs to

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,13 +5,13 @@
 
 <body>
 
-<div id="body-wrapper">
+<div id="index--body-wrapper">
     <header>
         <!-- TODO: See whether Steven has a logo in mind or not to add here -->
         <div id="header-logo">
             <h1>SdG</h1>
         </div>
-        
+
         <nav id="nav-contact-list">
             <ul>
                 <!-- To change the color of the SVG, check out Issue #10 on the Github Repo -->
