--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,13 +16,13 @@
             <ul>
                 <!-- To change the color of the SVG, check out Issue #10 on the Github Repo -->
                 <li class="list-item"><a href="tel:+31645048407">
-                    <object class="list-item-icon" data="../images/phone-icon.svg" type="image/svg+xml"></object>06 450 48 407
+                    <object class="list-item-icon" data="./images/phone-icon.svg" type="image/svg+xml"></object>06 450 48 407
                 </a></li>
                 <li class="list-item"><a href="mailto:graafdesteven@outlook.com">
-                    <object class="list-item-icon" data="../images/email-icon.svg" type="image/svg+xml" id="email-icon"></object>GraafdeSteven@outlook.com
+                    <object class="list-item-icon" data="./images/email-icon.svg" type="image/svg+xml" id="email-icon"></object>GraafdeSteven@outlook.com
                 </a></li>
                 <li class="list-item"><a href="https://www.linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank">
-                    <object class="list-item-icon" data="../images/linkedin-icon.svg" type="image/svg+xml"></object>Steven de Graaf
+                    <object class="list-item-icon" data="./images/linkedin-icon.svg" type="image/svg+xml"></object>Steven de Graaf
                 </a></li>
             </ul>
         </nav>
