Add proper closing header and html tags

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,3 +1,6 @@
+<!doctype html>
+<html lang="en">
+
 <head>
     <%= require('html-loader!./_page-partial.html') %>
     <title><%= htmlWebpackPlugin.options.title %></title>
@@ -53,3 +56,4 @@
 </div>
 
 </body>
+</html>
