Finish up basic index page stylings

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -33,23 +33,23 @@
 
     <div id="body-content">
         <div class="body-navlink" id="about" onclick="window.location.href='about.html'">
-            <span class="navlink-text">
-                About
+            <span>
+                <a class="link-text" href="about.html">About</a>
             </span>
         </div>
         <div class="body-navlink" id="sales" onclick="window.location.href='sales.html'">
-            <span class="navlink-text">
-                Sales
+            <span>
+                <a class="link-text" href="sales.html">Sales</a>
             </span>
         </div>
         <div class="body-navlink" id="cooperations" onclick="window.location.href='cooperation.html'">
-            <span class="navlink-text">
-                Co-ops
+            <span>
+                <a class="link-text" href="cooperation.html">Co-Ops</a>
             </span>
         </div>
         <div class="body-navlink" id="extras" onclick="window.location.href='extras.html'">
-            <span class="navlink-text">
-                Extras
+            <span>
+                <a class="link-text" href="extras.html">Extras</a>
             </span>
         </div>
     </div>
