--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,31 +8,38 @@
 
 <body>
 
-<div id="index--body-wrapper">
-    <header>
-        <!-- TODO: See whether Steven has a logo in mind or not to add here -->
-        <div id="header-logo" onclick="window.location.href='/'">
-            <h1>SdG</h1>
+<div id="body-wrapper">
+
+    <header id="body-header">
+
+        <div id="body-header--tagline">
+            <img id="header-logo" src="./images/logo.svg" height='100px' aria-hidden="true" alt="Steven Graaf Logo" onclick="window.location.href = '/'">
+            <div id="header-text">Professional Sales Manager</div>
         </div>
 
-        <nav id="header-nav-contact-list">
+        <div id="body-header--navlinks">
             <ul>
-                <!-- To change the color of the SVG, check out Issue #10 on the Github Repo -->
-                <li class="list-item"><a href="tel:+31645048407">
-                    <img src="./images/phone-icon.svg" alt="telephone icon" aria-hidden="true">06 450 48 407
-                </a></li>
-                <li class="list-item"><a href="mailto:graafdesteven@outlook.com">
-                    <img src="./images/email-icon.svg" alt="" aria-hidden="true">GraafdeSteven@outlook.com
-                </a></li>
-                <li class="list-item"><a href="https://www.linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank">
-                    <img src="./images/linkedin-icon.svg" alt="" aria-hidden="true">Steven de Graaf
-                </a></li>
+                <li class="navlink-item">
+                    <a class="navlink-link" href="tel:+31645048407">
+                        <img src="./images/phone-icon.svg" alt="Phone Icon" aria-hidden="true">+316 450 48 407
+                    </a>
+                </li>
+                <li class="navlink-item">
+                    <a class="navlink-link" href="mailto:graafdesteven@outlook.com" target="_blank">
+                        <img src="./images/email-icon.svg" alt="Email Icon" aria-hidden="true">GraafdeSteven@outlook.com
+                    </a>
+                </li>
+                <li class="navlink-item">
+                    <a class="navlink-link" href="https://linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank">
+                        <img src="./images/linkedin-icon.svg" alt="Linkedin Icon" aria-hidden="true">Steven de Graaf
+                    </a>
+                </li>
             </ul>
-        </nav>
+        </div>
     </header>
 
-    <div id="body-content">
-        <div class="body-navlink" id="about" onclick="window.location.href='about.html'">
+
+
             <span>
                 <a class="link-text" href="about.html">About</a>
             </span>
