Add placeholder image

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -38,8 +38,12 @@
         </div>
     </header>
 
-
-
+    <div id="body-content">
+        <!-- A very brief bio of Steven's, what he does, etc. -->
+        <div id="body-content--about">
+            <div class="content-mugshot-container">
+                <img class="content-mugshot" src="./images/mugshot.jpg" alt="An Image of Steven" aria-hidden="true">
+            </div>
 </div>
 
 </body>
