Finish up index html with bar graph navlinks

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,7 +11,7 @@
 <div id="body-wrapper">
 
     <header id="body-header">
-
+        <!-- Header containing the logo, Steven's title & social navlinks -->
         <div id="body-header--tagline">
             <img id="header-logo" src="./images/logo.svg" height='100px' aria-hidden="true" alt="Steven Graaf Logo" onclick="window.location.href = '/'">
             <div id="header-text">Professional Sales Manager</div>
@@ -44,6 +44,19 @@
             <div class="content-mugshot-container">
                 <img class="content-mugshot" src="./images/mugshot.jpg" alt="An Image of Steven" aria-hidden="true">
             </div>
+            <div class="content-text">
+                <h1>Hi, I'm Steven</h1>
+                <h2>I'm an experienced Sales Manager, and I'm eager to get involved with your business however I can.</h2>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi corporis deserunt dicta dolorum omnis praesentium tenetur vel! Beatae eos, et excepturi exercitationem explicabo id illo laborum modi tenetur veniam voluptates. Accusamus aperiam, asperiores aspernatur dolorem, earum eius fugiat impedit, ipsum iure modi molestias nemo nesciunt nihil nisi odio optio pariatur quaerat quia recusandae reprehenderit similique sit sunt tempora vero voluptatibus!Accusamus accusantium aspernatur beatae dolorem earum id, itaque, molestiae nemo numquam perspiciatis quas recusandae, tenetur? Commodi, consectetur cum doloribus eaque eveniet harum laborum nobis possimus reprehenderit sed tempore ut voluptas.</p>
+        </div>
+        <div id="body-content--navigation">
+            <div id="about-box" class="content-navbox" onclick="window.location.href='./about.html'"><a href="./about.html" class="content-navlink"><p>About</p></a></div>
+            <div id="coops-box" class="content-navbox" onclick="window.location.href='./cooperation.html'"><a href="./cooperation.html" class="content-navlink"><p>Coops</p></a></div>
+            <div id="sales-box" class="content-navbox" onclick="window.location.href='./sales.html'"><a href="./sales.html" class="content-navlink"><p>Sales</p></a></div>
+            <div id="extra-box" class="content-navbox" onclick="window.location.href='./extras.html'"><a href="./extras.html" class="content-navlink"><p>Extras</p></a></div>
+        </div>
+    </div>
 </div>
 
 </body>
