Change placeholder text to Dutch

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -45,10 +45,10 @@
                 <img class="content-mugshot" src="./images/mugshot.jpg" alt="An Image of Steven" aria-hidden="true">
             </div>
             <div class="content-text">
-                <h1>Hi, I'm Steven</h1>
-                <h2>I'm an experienced Sales Manager, and I'm eager to get involved with your business however I can.</h2>
+                <h1>Hoi, ik ben Steven</h1>
+                <h2>Afhakken van een Os, en hoe men daar mede handeldt, en hoe men de stukken best gebruikt</h2>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi corporis deserunt dicta dolorum omnis praesentium tenetur vel! Beatae eos, et excepturi exercitationem explicabo id illo laborum modi tenetur veniam voluptates. Accusamus aperiam, asperiores aspernatur dolorem, earum eius fugiat impedit, ipsum iure modi molestias nemo nesciunt nihil nisi odio optio pariatur quaerat quia recusandae reprehenderit similique sit sunt tempora vero voluptatibus!Accusamus accusantium aspernatur beatae dolorem earum id, itaque, molestiae nemo numquam perspiciatis quas recusandae, tenetur? Commodi, consectetur cum doloribus eaque eveniet harum laborum nobis possimus reprehenderit sed tempore ut voluptas.</p>
+            <p>Ik ben makelaar in koffi, en woon op de Lauriergracht No 37. Het is mijn gewoonte niet, romans te schrijven, of zulke dingen, en het heeft dan ook lang geduurd, voor ik er toe overging een paar riem papier extra te bestellen, en het werk aan te vangen, dat gij, lieve lezer, zoâven in de hand hebt genomen, en dat ge lezen moet als ge makelaar in koffie zijt, of als ge wat anders zijt. Niet alleen dat ik nooit iets schreef wat naar een roman geleek, maar ik houd er zelfs niet van, iets dergelijks te lezen, omdat ik een man van zaken ben. Sedert jaren vraag ik mij af, waartoe zulke dingen dienen, en ik sta verbaasd over de onbeschaamdheid</p>
         </div>
         <div id="body-content--navigation">
             <div id="about-box" class="content-navbox" onclick="window.location.href='./about.html'"><a href="./about.html" class="content-navlink"><p>About</p></a></div>
