Adjust the index page according to client wishes
List of changes include:

Shifted the grid around, now there are 3 divs inside #body-content that act as the main divs. 2 Graph ones and the about div

Include a <meta> description tag

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,6 +4,7 @@
 <head>
     <%= require('html-loader!./_page-partial.html') %>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="description" content="Steven de Graaf is a professional Sales Manager and Coach with a long history of satisfied customers">
 </head>
 
 <body>
@@ -46,17 +47,20 @@
                         <img src="./images/person.jpg" alt="Photo of Steven">
                     </picture>
                 </div>
-            <div class="content-text">
-                <h1>Hoi, ik ben Steven</h1>
-                <h2>Afhakken van een Os, en hoe men daar mede handeldt, en hoe men de stukken best gebruikt</h2>
+                <div class="content-text">
+                    <h1>Hoi, ik ben Steven</h1>
+                    <h2>Afhakken van een Os, en hoe men daar mede handeldt, en hoe men de stukken best gebruikt</h2>
+                </div>
             </div>
+
+            <div id="body-content--underside">
+                <div id="about-box" class="content-navbox" onclick="window.location.href= './about.html'"><a href="./about.html" class="content-navlink"><p>About</p></a></div>
+                <div id="coops-box" class="content-navbox" onclick="window.location.href= './cooperation.html'"><a href="./cooperation.html" class="content-navlink"><p>Coops</p></a></div>
             </div>
+            <div id="body-content--rightside">
+                <div id="sales-box" class="content-navbox" onclick="window.location.href= './sales.html'"><a href="./sales.html" class="content-navlink"><p>Sales</p></a></div>
+                <div id="extra-box" class="content-navbox" onclick="window.location.href= './extras.html'"><a href="./extras.html" class="content-navlink"><p>Extras</p></a></div>
             </div>
-        <div id="body-content--navigation">
-            <div id="about-box" class="content-navbox" onclick="window.location.href='./about.html'"><a href="./about.html" class="content-navlink"><p>About</p></a></div>
-            <div id="coops-box" class="content-navbox" onclick="window.location.href='./cooperation.html'"><a href="./cooperation.html" class="content-navlink"><p>Coops</p></a></div>
-            <div id="sales-box" class="content-navbox" onclick="window.location.href='./sales.html'"><a href="./sales.html" class="content-navlink"><p>Sales</p></a></div>
-            <div id="extra-box" class="content-navbox" onclick="window.location.href='./extras.html'"><a href="./extras.html" class="content-navlink"><p>Extras</p></a></div>
         </div>
     </div>
 </div>
