Change logo size definition from inline to stylesheet

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,7 +13,7 @@
 
     <header id="body-header">
         <div id="body-header--tagline">
-            <img id="header-logo" src="./images/logo.svg" height='100px' aria-hidden="true" alt="Steven Graaf Logo" onclick="window.location.href = '/'">
+            <img id="header-logo" src="./images/logo.svg" aria-hidden="true" alt="Steven Graaf Logo" onclick="window.location.href = '/'">
         </div>
 
         <div id="body-header--navlinks">
