Rearrange index page to a more logical layout
Remove the grid elements from the content-wrapper and moved that into a more logical view

Consolidate the body content navlinks into a singular entity and moved the about box into an absolutely positioned box

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -52,13 +52,11 @@
                 </div>
             </div>
 
-            <div id="body-content--underside">
-                <div id="about-box" class="content-navbox" onclick="window.location.href= './about.html'"><a href="./about.html" class="content-navlink"><p>About</p></a></div>
-                <div id="coops-box" class="content-navbox" onclick="window.location.href= './cooperation.html'"><a href="./cooperation.html" class="content-navlink"><p>Coops</p></a></div>
-            </div>
-            <div id="body-content--rightside">
-                <div id="sales-box" class="content-navbox" onclick="window.location.href= './sales.html'"><a href="./sales.html" class="content-navlink"><p>Sales</p></a></div>
-                <div id="extra-box" class="content-navbox" onclick="window.location.href= './extras.html'"><a href="./extras.html" class="content-navlink"><p>Extras</p></a></div>
+            <div id="body-content--navlinks">
+                <div id="about-box" class="content-navbox" onclick="window.location.href='./about.html'"><a href="./about.html" class="content-navlink"><p>About</p></a></div>
+                <div id="coops-box" class="content-navbox" onclick="window.location.href='./cooperation.html'"><a href="./cooperation.html" class="content-navlink"><p>Coops</p></a></div>
+                <div id="sales-box" class="content-navbox" onclick="window.location.href='./sales.html'"><a href="./sales.html" class="content-navlink"><p>Sales</p></a></div>
+                <div id="extra-box" class="content-navbox" onclick="window.location.href='./extras.html'"><a href="./extras.html" class="content-navlink"><p>Extras</p></a></div>
             </div>
         </div>
 </div>
