--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,39 +11,15 @@
 
 <div id="body-wrapper">
 
-    <header id="body-header">
-        <div id="body-header--tagline">
-            <img id="header-logo" src="./images/logo.svg" aria-hidden="true" alt="Steven Graaf Logo" onclick="window.location.href = '/'">
-        </div>
-
-        <div id="body-header--navlinks">
-            <ul>
-                <li class="navlink-item">
-                    <a class="navlink-link" href="tel:+31645048407">
-                        <img src="./images/phone-icon.svg" alt="Phone Icon" aria-hidden="true">+316 450 48 407
-                    </a>
-                </li>
-                <li class="navlink-item">
-                    <a class="navlink-link" href="mailto:graafdesteven@outlook.com" target="_blank">
-                        <img src="./images/email-icon.svg" alt="Email Icon" aria-hidden="true">GraafdeSteven@outlook.com
-                    </a>
-                </li>
-                <li class="navlink-item">
-                    <a class="navlink-link" href="https://linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank">
-                        <img src="./images/linkedin-icon.svg" alt="Linkedin Icon" aria-hidden="true">Steven de Graaf
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </header>
+    <%= require('html-loader!./_header.html') %>
 
         <div id="body-content-wrapper">
             <div id="body-content--about">
                 <div class="content-mugshot-container">
                     <picture class="content-mugshot">
-                        <source srcset="./images/person.webp" type="image/webp">
-                        <source srcset="./images/person.jpg" type="image/jpeg">
-                        <img src="./images/person.jpg" alt="Photo of Steven">
+                        <source srcset="../images/person.webp" type="image/webp">
+                        <source srcset="../images/person.jpg" type="image/jpeg">
+                        <img src="../images/person.jpg" alt="Photo of Steven">
                     </picture>
                 </div>
                 <div class="content-text">
