Adjust header to fit on smaller screens

--- a/src/pages/_header.html
+++ b/src/pages/_header.html
@@ -6,17 +6,17 @@
         <ul>
             <li class="navlink-item">
                 <a class="navlink-link" href="tel:+31645048407">
-                    <img src="../images/phone-icon.svg" alt="Phone Icon" aria-hidden="true">+316 450 48 407
+                    <img src="../images/phone-icon.svg" alt="Phone Icon" aria-hidden="true"><span class="navlink-text">+316 450 48 407</span>
                 </a>
             </li>
             <li class="navlink-item">
                 <a class="navlink-link" href="mailto:graafdesteven@outlook.com" target="_blank">
-                    <img src="../images/email-icon.svg" alt="Email Icon" aria-hidden="true">GraafdeSteven@outlook.com
+                    <img src="../images/email-icon.svg" alt="Email Icon" aria-hidden="true"><span class="navlink-text">GraafdeSteven@outlook.com</span>
                 </a>
             </li>
             <li class="navlink-item">
                 <a class="navlink-link" href="https://linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank">
-                    <img src="../images/linkedin-icon.svg" alt="Linkedin Icon" aria-hidden="true">Steven de Graaf
+                    <img src="../images/linkedin-icon.svg" alt="Linkedin Icon" aria-hidden="true"><span class="navlink-text">Steven de Graaf</span>
                 </a>
             </li>
         </ul>
