Complete basic about page look

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -4,7 +4,44 @@
 </head>
 
 <body>
-<div id="about--body-wrapper">
-    About
+<div id="body-wrapper">
+    <%= require('html-loader!./_header.html') %>
+
+    <div id="about-content-wrapper">
+
+        <div class="timeline">
+            <div class="container left">
+                <div class="content">
+                    <h2>2020 - Worked at a company</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis debitis doloremque dolores, dolorum ex fugit, minima, numquam optio placeat ratione recusandae tenetur ut? Aliquam amet aspernatur consectetur corporis excepturi nam numquam saepe temporibus. Architecto asperiores autem delectus dolor earum expedita nihil optio quo, quod repudiandae rerum sed ut vero voluptatum.</p>
+                </div>
+            </div>
+            <div class="container right">
+                <div class="content">
+                    <h2>2019 - Worked at a company</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet asperiores autem blanditiis, debitis doloremque doloribus eaque eius, fuga hic id illum ipsam labore laborum laudantium magnam obcaecati perferendis praesentium quos recusandae repellat rerum saepe sapiente suscipit veniam veritatis vitae voluptate voluptatem? Ad aspernatur, corporis illo iure natus omnis sunt voluptatibus.</p>
+                </div>
+            </div>
+            <div class="container left">
+                <div class="content">
+                    <h2>2018 - Worked at a company</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nisi officiis omnis similique? Dolorem hic laborum laudantium libero magnam officiis porro quis reprehenderit, veritatis vero! Aperiam atque distinctio dolores ea earum, eligendi illo laudantium maiores molestiae natus placeat quae quam qui quidem quod ratione sit ut velit, voluptate voluptatem, voluptates.</p>
+                </div>
+            </div>
+            <div class="container right">
+                <div class="content">
+                    <h2>2017 - Worked at a company</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur ea eum facere neque, possimus quos repellendus? Aspernatur ducimus error hic magnam minima minus nostrum officia ut vel velit? Amet culpa eligendi est incidunt, modi nemo repudiandae voluptatem voluptates. Aliquid at cumque ex maiores mollitia optio quam repudiandae similique voluptas voluptatem?</p>
+                </div>
+            </div>
+            <div class="container left">
+                <div class="content">
+                    <h2>2016 - Worked at a company</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores beatae consequatur distinctio, ea earum error esse et exercitationem labore laboriosam libero nemo nesciunt nihil officia porro, possimus praesentium ratione reprehenderit, saepe sapiente soluta tempore unde veniam voluptatem voluptatum. Ab ducimus eos iure voluptate! Dolor exercitationem fuga molestiae odio officia vero?</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
 </body>
