Change the header to be independent on index and other pages
Moved the partial imports from the index page and introduced a differently styled header navlink section for the other pages

--- a/src/pages/cooperation.html
+++ b/src/pages/cooperation.html
@@ -6,7 +6,7 @@
 <body>
 
 <div id="cooperation--body-wrapper">
-    Cooperation
+    <%= require('html-loader!./_header.html') %>
 </div>
 
 </body>
