--- a/src/pages/_header.html
+++ b/src/pages/_header.html
@@ -4,6 +4,25 @@
         <img id="header-logo" src="../images/logo.svg" aria-hidden="true" alt="Steven Graaf Logo" onclick="window.location.href = '/'">
     </div>
 
+    <div id="header-navigation">
+
+        <div class="header-navigation--box">
+            <a class="header-navlink" id="about-header-link" href="./about.html">About</a>
+        </div>
+
+        <div class="header-navigation--box">
+            <a class="header-navlink" id="coops-header-link" href="./cooperation.html">Coops</a>
+        </div>
+
+        <div class="header-navigation--box">
+            <a class="header-navlink" id="sales-header-link" href="sales.html">Sales</a>
+        </div>
+
+        <div class="header-navigation--box">
+            <a class="header-navlink" id="extras-header-link" href="extras.html">Extras</a>
+        </div>
+
+    </div>
 
     <div id="body-header--social-navlinks">
         <ul>
