Rename main body-wrapper div to be consistent across pages for overflow-y

--- a/src/pages/cooperation.html
+++ b/src/pages/cooperation.html
@@ -5,7 +5,7 @@
 
 <body>
 
-<div id="cooperation--body-wrapper">
+<div id="body-wrapper">
     <%= require('html-loader!./_header.html') %>
 </div>
 
