--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="nl">
+
 <head>
     <%= require('html-loader!./_page-partial.html') %>
     <title><%= htmlWebpackPlugin.options.title %></title>
@@ -45,3 +48,4 @@
     </div>
 </div>
 </body>
+</html>
