--- a/src/pages/extras.html
+++ b/src/pages/extras.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="nl">
+
 <head>
     <%= require('html-loader!./_page-partial.html') %>
     <title><%= htmlWebpackPlugin.options.title %></title>
@@ -10,3 +13,4 @@
 </div>
 
 </body>
+</html>
