--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="nl">
 
 <head>
     <%= require('html-loader!./_page-partial.html') %>
