Add rel=noopener to LinkedIn link

--- a/src/pages/_header.html
+++ b/src/pages/_header.html
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li class="navlink-item">
-                <a class="navlink-link" href="https://linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank">
+                <a class="navlink-link" href="https://linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank" rel="noopener">
                     <img src="../images/linkedin-icon.svg" alt="Linkedin Icon" aria-hidden="true">
                     <span class="navlink-text">Steven de Graaf</span>
                 </a>
