--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -29,7 +29,7 @@
                 </li>
                 <li class="navlink-item">
                     <a class="navlink-link" href="https://linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank">
-                        <img src="../images/linkedin-icon.svg" alt="Linkedin Icon" aria-hidden="true"><span class="navlink-text">Steven de Graaf</span>
+                        <img src="../images/linkedin-icon.svg" alt="Linkedin Icon" aria-hidden="true" rel="noopener"><span class="navlink-text">Steven de Graaf</span>
                     </a>
                 </li>
             </ul>
