--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -28,8 +28,8 @@
                     </a>
                 </li>
                 <li class="navlink-item">
-                    <a class="navlink-link" href="https://linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank">
-                        <img src="../images/linkedin-icon.svg" alt="Linkedin Icon" aria-hidden="true"><span class="navlink-text">Steven de Graaf</span>
+                    <a class="navlink-link" href="https://linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank" rel="noopener">
+                        <img src="../images/linkedin-icon.svg" alt="Linkedin Icon" aria-hidden="true" ><span class="navlink-text">Steven de Graaf</span>
                     </a>
                 </li>
             </ul>
