change caps to no caps

--- a/src/pages/_header.html
+++ b/src/pages/_header.html
@@ -35,7 +35,7 @@
             <li class="navlink-item">
                 <a class="navlink-link" href="mailto:graafdesteven@outlook.com" target="_blank">
                     <img src="../images/email-icon.svg" alt="Email Icon" aria-hidden="true">
-                    <span class="navlink-text">GraafdeSteven@outlook.com</span>
+                    <span class="navlink-text">graafdesteven@outlook.com</span>
                 </a>
             </li>
             <li class="navlink-item">
