Make the header a consistent size across pages

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -24,7 +24,7 @@
                 </li>
                 <li class="navlink-item">
                     <a class="navlink-link" href="mailto:graafdesteven@outlook.com" target="_blank">
-                        <img src="../images/email-icon.svg" alt="Email Icon" aria-hidden="true"><span class="navlink-text">GraafdeSteven@outlook.com</span>
+                        <img src="../images/email-icon.svg" alt="Email Icon" aria-hidden="true"><span class="navlink-text">graafdesteven@outlook.com</span>
                     </a>
                 </li>
                 <li class="navlink-item">
