Add index page stylings with dutch text for Steven's about bubble

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -46,8 +46,8 @@
                     </picture>
                 </div>
                 <div class="content-text">
-                    <h1>Hoi, ik ben Steven</h1>
-                    <h2>Afhakken van een Os, en hoe men daar mede handeldt, en hoe men de stukken best gebruikt</h2>
+                    <h1>Hoi, ik ben Steven!</h1>
+                    <p class="about-paragraph">Ik interesseer me in het creëren van bestaansrecht bij het midden - en kleinbedrijf met een maatschappelijk doel. De praktijk toont keer op keer aan: de combinatie van het trainen, coachen en ondersteunen van een team is een meerwaarde voor elk bedrijf. Benieuwd? Kijk gerust even rond!</p>
                 </div>
             </div>
 
