--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -12,35 +12,43 @@
 
     <div id="about-content-wrapper">
 
+        <div class="about-text-wrapper">
+            <h1>Over Mij</h1>
+            <p>De ervaring die ik de laatste jaren heb opgedaan komt vanuit verschillende werkvelden, disciplines en bedrijven. De praktijk toont keer op keer aan: de combinatie van het trainen, coachen en ondersteunen van een team is een meerwaarde voor elk bedrijf.</p>
+            <p>Als kind mocht ik altijd op vrijdag mee met mijn vader om te borrelen met zijn zakenpartners in zijn ijzerwarenhandel. Daar heb ik op jonge leeftijd geleerd om scherp te communiceren. De andere helft van mijn jeugd heb ik doorgebracht in de sportschool van mijn moeder. Vanaf mijn 14e gaf ik samen met haar en mijn opa sportles. Zo heb ik mezelf ontwikkeld als trainer en coach. Docentschap en ondernemerschap zit dus in de familie.</p>
+            <p>Daarna ben ik in gescout voor de sales. Dit heb ik gedaan in Emolife, Streetwise Event Promotions en Solarwinds N-able (later Solarwinds MSP) waardoor ik koude acquisitie, warme acquisitie en event acquisitie heb opgedaan.</p>
+            <p>Tot op de dag van vandaag interesseer ik me in het creëren van bestaansrecht bij het midden- en kleinbedrijf met een maatschappelijk doel. De uitvoering waar ik me mee bezig houdt is maatwerk. Vind je het leuk om een kijkje te nemen bij de bedrijven waar ik mee samenwerk? Kijk dan bij mijn projecten!</p>
+        </div>
+
         <div class="timeline">
             <div class="container left">
                 <div class="content">
-                    <h2>2020 - Worked at a company</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis debitis doloremque dolores, dolorum ex fugit, minima, numquam optio placeat ratione recusandae tenetur ut? Aliquam amet aspernatur consectetur corporis excepturi nam numquam saepe temporibus. Architecto asperiores autem delectus dolor earum expedita nihil optio quo, quod repudiandae rerum sed ut vero voluptatum.</p>
+                    <h2>Solarwinds MSP, Utrecht</h2><pre>10/2016 - 01/2018</pre>
+                    <p>International sales development representative.</p>
                 </div>
             </div>
             <div class="container right">
                 <div class="content">
-                    <h2>2019 - Worked at a company</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet asperiores autem blanditiis, debitis doloremque doloribus eaque eius, fuga hic id illum ipsam labore laborum laudantium magnam obcaecati perferendis praesentium quos recusandae repellat rerum saepe sapiente suscipit veniam veritatis vitae voluptate voluptatem? Ad aspernatur, corporis illo iure natus omnis sunt voluptatibus.</p>
+                    <h2>Xerox, Hilversum </h2><pre>02/2015 - 07/2016</pre>
+                    <p>Eerste lijn allround agent, Migratie expert.</p>
                 </div>
             </div>
             <div class="container left">
                 <div class="content">
-                    <h2>2018 - Worked at a company</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nisi officiis omnis similique? Dolorem hic laborum laudantium libero magnam officiis porro quis reprehenderit, veritatis vero! Aperiam atque distinctio dolores ea earum, eligendi illo laudantium maiores molestiae natus placeat quae quam qui quidem quod ratione sit ut velit, voluptate voluptatem, voluptates.</p>
+                    <h2>Streetwise Event Promotions, Utrecht</h2><pre>12/2013 - 10/2014</pre>
+                    <p>Sales representative buitendienst, Promoter, recruiter, Shift leader,Project leader.</p>
                 </div>
             </div>
             <div class="container right">
                 <div class="content">
-                    <h2>2017 - Worked at a company</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur ea eum facere neque, possimus quos repellendus? Aspernatur ducimus error hic magnam minima minus nostrum officia ut vel velit? Amet culpa eligendi est incidunt, modi nemo repudiandae voluptatem voluptates. Aliquid at cumque ex maiores mollitia optio quam repudiandae similique voluptas voluptatem?</p>
+                    <h2>Emolife Street, Utrecht</h2><pre>08/2012 - 01/2013</pre>
+                    <p>Sales representative buitendienst, Promoter, Recruiter</p>
                 </div>
             </div>
             <div class="container left">
                 <div class="content">
-                    <h2>2016 - Worked at a company</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores beatae consequatur distinctio, ea earum error esse et exercitationem labore laboriosam libero nemo nesciunt nihil officia porro, possimus praesentium ratione reprehenderit, saepe sapiente soluta tempore unde veniam voluptatem voluptatum. Ab ducimus eos iure voluptate! Dolor exercitationem fuga molestiae odio officia vero?</p>
+                    <h2>Sportinstituut Rebel, Huizen</h2><pre>03/2007 - 05/2014</pre>
+                    <p>Allround medewerker</p>
                 </div>
             </div>
         </div>
