Swap out the names of all the pages to the Dutch versions

--- a/src/pages/_header.html
+++ b/src/pages/_header.html
@@ -7,11 +7,11 @@
     <div id="header-navigation">
 
         <div class="header-navigation--box">
-            <a class="header-navlink" id="about-header-link" href="./about.html">About</a>
+            <a class="header-navlink" id="about-header-link" href="over_mij.html">Over Mij</a>
         </div>
 
         <div class="header-navigation--box">
-            <a class="header-navlink" id="coops-header-link" href="./cooperation.html">Coops</a>
+            <a class="header-navlink" id="coops-header-link" href="projecten.html">Projecten</a>
         </div>
 
         <div class="header-navigation--box">
@@ -19,7 +19,7 @@
         </div>
 
         <div class="header-navigation--box">
-            <a class="header-navlink" id="extras-header-link" href="extras.html">Extras</a>
+            <a class="header-navlink" id="extras-header-link" href="extra.html">Extras</a>
         </div>
 
     </div>
