--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -52,10 +52,10 @@
             </div>
 
             <div id="body-content--navlinks">
-                <div id="about-box" class="content-navbox" onclick="window.location.href='./about.html'"><a href="./about.html" class="content-navlink"><p>About</p></a></div>
-                <div id="coops-box" class="content-navbox" onclick="window.location.href='./cooperation.html'"><a href="./cooperation.html" class="content-navlink"><p>Coops</p></a></div>
+                <div id="about-box" class="content-navbox" onclick="window.location.href='over_mij.html'"><a href="over_mij.html" class="content-navlink"><p>Over Mij</p></a></div>
+                <div id="coops-box" class="content-navbox" onclick="window.location.href='projecten.html'"><a href="projecten.html" class="content-navlink"><p>Projecten</p></a></div>
                 <div id="sales-box" class="content-navbox" onclick="window.location.href='./sales.html'"><a href="./sales.html" class="content-navlink"><p>Sales</p></a></div>
-                <div id="extra-box" class="content-navbox" onclick="window.location.href='./extras.html'"><a href="./extras.html" class="content-navlink"><p>Extras</p></a></div>
+                <div id="extra-box" class="content-navbox" onclick="window.location.href='extra.html'"><a href="extra.html" class="content-navlink"><p>Extra</p></a></div>
             </div>
         </div>
 </div>
