remove extra letter from extra link

--- a/src/pages/_header.html
+++ b/src/pages/_header.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="header-navigation--box">
-            <a class="header-navlink" id="extras-header-link" href="extra.html">Extras</a>
+            <a class="header-navlink" id="extras-header-link" href="extra.html">Extra</a>
         </div>
 
     </div>
