--- a/src/pages/extra.html
+++ b/src/pages/extra.html
@@ -10,6 +10,16 @@
 
 <div id="body-wrapper">
     <%= require('html-loader!./_header.html') %>
+
+    <div class="extra-text-wrapper">
+        <div class="texts">
+            <p>Om een positieve bijdrage te leveren aan mijn omgeving hou ik mezelf naast mijn werk ook graag bezig met extra projecten gericht op onderwijs en beweging. Leren is een wederzijdse ervaring, en zo houdt mijn omgeving mij net zo scherp als ik hun!</p>
+            <h2>Zwemmen</h2>
+            <p>Bij Rebelsport in Huizen geef ik zwemles aan kinderen en volwassenen. Zelf ben ik hier grotendeels opgegroeid, waardoor het voor mij erg leuk is om in de sportschool terug te komen.</p>
+            <h2>Mobiliteit</h2>
+            <p>Beweging en coördinatie is echt een persoonlijke hobby. Via het lesgeven bij de sportschool ben ik mobiliteitstrainingen gaan geven als vrijwilliger bij Tijd Voor Meedoen.</p>
+        </div>
+    </div>
 </div>
 
 </body>
