Remove punctuation from paragraphs

--- a/src/pages/over_mij.html
+++ b/src/pages/over_mij.html
@@ -24,19 +24,19 @@
             <div class="container left">
                 <div class="content">
                     <h2>Solarwinds MSP, Utrecht</h2><pre>10/2016 - 01/2018</pre>
-                    <p>International sales development representative.</p>
+                    <p>International sales development representative</p>
                 </div>
             </div>
             <div class="container right">
                 <div class="content">
                     <h2>Xerox, Hilversum </h2><pre>02/2015 - 07/2016</pre>
-                    <p>Eerste lijn allround agent, Migratie expert.</p>
+                    <p>Eerste lijn allround agent, Migratie expert</p>
                 </div>
             </div>
             <div class="container left">
                 <div class="content">
                     <h2>Streetwise Event Promotions, Utrecht</h2><pre>12/2013 - 10/2014</pre>
-                    <p>Sales representative buitendienst, Promoter, recruiter, Shift leader,Project leader.</p>
+                    <p>Sales representative buitendienst, Promoter, recruiter, Shift leader,Project leader</p>
                 </div>
             </div>
             <div class="container right">
