Swap texts in projects and sales

--- a/src/pages/sales.html
+++ b/src/pages/sales.html
@@ -11,57 +11,14 @@
 <div id="body-wrapper">
     <%= require('html-loader!./_header.html') %>
 
-    <div id="coop-content-wrapper">
-
-        <div class="company-section" id="tijd-medoen">
-            <div class="company-title">
-                <h1>Opleidingsadviseur bij het NLP-instituut</h1>
-            </div>
-            <div class="company-description">
-                <p>Neuro Linguïstisch Programmeren is de studie naar de onbewuste processen die de basis zijn voor succesvol gedrag en effectieve communicatie. Het NLP-instituut verzorgd NLP-opleidingen tot internationaal erkend practitioner, master trainer en/of master coach. Roderik Kelderman, de oprichter van het NLP-instituut, doet niets liever dan mensen opleiden tot een betere versie van hunzelf. In 2018 en 2019 waren zij beste opleider van Nederland.</p>
-            </div>
-            <div class="company-video">
-                <video controls>
-                    <source class="video" src="https://res.cloudinary.com/sensanaty/video/upload/w_450,h_350/v1587815242/Placeholder_mmlsmc.webm" type="video/webm">
-                    <source src="https://res.cloudinary.com/sensanaty/video/upload/v1587815242/Placeholder_mmlsmc.mp4" type="video/mp4">
-                    <p>Your browser does not support this type of video</p>
-                </video>
-            </div>
+    <div class="project-text-wrapper">
+        <div class="texts">
+            <p>In het contact wat ik heb gehad met verschillende bedrijven ben ik erachter gekomen dat zij vaak een goed idee hebben, maar moeite hebben met de uitvoering ervan. Ik help met het creëren van naamsbekendheid en bestaansrecht voor bedrijven met een maatschappelijk doel onder de noemer ‘sales’.</p>
+            <p>Via een ‘lead by example’ attitude ben ik ondersteunend aan het bedrijf. Ik kijk naar de behoeftes van een bedrijf door eventuele knelpunten te achterhalen. Door middel van coaching zorg ik ervoor dat gestelde doelen worden behaald. Voor een duurzame samenwerking met de bedrijven train ik teams zodat zij vanuit dezelfde kennis leren handelen. Zo leer ik bedrijven hoe ze zichzelf gezond kunnen houden.</p>
+            <p>Mijn visie op sales is constant in ontwikkeling. Daarom vind ik het erg interessant om over verschillende ervaringen die mensen opdoen in het bedrijfsleven te horen. Interesse? Maak dan een afspraak om te bellen.</p>
         </div>
-
-        <div class="company-section" id="rebelsport">
-            <div class="company-title">
-                <h1>Energy Control Academy</h1>
-            </div>
-            <div class="company-description">
-                <p>Energy Control Academy helpt voornamelijk bij het herstel van mensen met vermoeidheids- en burn-out klachten. De innovatieve methode legt de focus op ingekaderde beweging in combinatie met ademhalingstechnieken en wordt daarnaast ook gebruikt in de begeleiding van (top)sporters. Naast het creëren van naamsbekendheid en bestaansrecht voor Energy Control Academy begeleid Steven mensen in het traject zodat zij op een fijne manier weer de alledaagse dingen in het leven kunnen oppakken.</p>
-            </div>
-            <div class="company-video">
-                <video controls>
-                    <source src="https://res.cloudinary.com/sensanaty/video/upload/w_450,h_350/v1587815242/Placeholder_mmlsmc.webm" type="video/webm">
-                    <source src="https://res.cloudinary.com/sensanaty/video/upload/v1587815242/Placeholder_mmlsmc.mp4" type="video/mp4">
-                    <p>Your browser does not support this type of video</p>
-                </video>
-            </div>
-        </div>
-
-        <div class="company-section" id="nlp-institut">
-            <div class="company-title">
-                <h1>Pachira investments</h1>
-            </div>
-            <div class="company-description">
-                <p>Pachira investments is een investeringsmaatschappij die investeringen aanneemt voor kapitaalgroei, zodat zij die uiteindelijk kunnen herinvesteren in maatschappelijke doelen en het helpen van het mkb.</p>
-            </div>
-            <div class="company-video">
-                <video controls>
-                    <source src="https://res.cloudinary.com/sensanaty/video/upload/w_450,h_350/v1587815242/Placeholder_mmlsmc.webm" type="video/webm">
-                    <source src="https://res.cloudinary.com/sensanaty/video/upload/v1587815242/Placeholder_mmlsmc.mp4" type="video/mp4">
-                    <p>Your browser does not support this type of video</p>
-                </video>
-            </div>
-        </div>
-
     </div>
+
 </div>
 
 </body>
