Make logo in header a link and remove pointer events

--- a/src/pages/_header.html
+++ b/src/pages/_header.html
@@ -1,7 +1,9 @@
 <header id="body-header">
 
     <div id="body-header--tagline">
-        <img id="header-logo" src="../images/logo.svg" aria-hidden="true" alt="Steven Graaf Logo" onclick="window.location.href = '/'">
+        <a href="/">
+            <img id="header-logo" src="../images/logo.svg" aria-hidden="true" alt="Steven Graaf Logo">
+        </a>
     </div>
 
     <div id="header-navigation">
@@ -39,7 +41,8 @@
                 </a>
             </li>
             <li class="navlink-item">
-                <a class="navlink-link" href="https://linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank" rel="noopener">
+                <a class="navlink-link" href="https://linkedin.com/in/steven-de-graaf-a4486b128/" target="_blank"
+                   rel="noopener">
                     <img src="../images/linkedin-icon.svg" alt="Linkedin Icon" aria-hidden="true">
                     <span class="navlink-text">Steven de Graaf</span>
                 </a>
