--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,7 +13,9 @@
 
     <header id="body-header">
         <div id="body-header--tagline">
-            <img id="header-logo" src="../images/logo.svg" aria-hidden="true" alt="Steven Graaf Logo" onclick="window.location.href = '/'">
+            <a href="/">
+                <img id="header-logo" src="../images/logo.svg" aria-hidden="true" alt="Steven Graaf Logo">
+            </a>
         </div>
         <div id="body-header--social-navlinks">
             <ul>
